app/globals.css
@import 'tailwindcss';

@layer components {
  .responsive-container {
    @apply w-full;
  }
}
/* Base theme variables */
:root {
  --background: #0a0a0a;
  --foreground: #ededed;
  --navbar-text: #99ffd3;
}

/* Optional: detect user's color preference and adjust */
@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
    --navbar-text: #99ffd3;
  }
}

/* Base styles */
body {
  background: var(--background);
  color: var(--foreground);
  @apply m-8 text-gray-200;
}

h1,
h2 {
  @apply text-lg font-bold text-black;
}

main {
  @apply mx-auto my-12 max-w-5xl px-8;
}

main > h2 {
  @apply mb-4 pb-2 text-base text-gray-200;
}

p > a {
  @apply underline;
}

/* Navbar styles */
.navbar {
  @apply mx-auto my-10 flex max-w-5xl items-center justify-between border-b-2 border-gray-700 pb-4;
}

nav {
  @apply mx-auto my-10 flex max-w-5xl items-center gap-5 border-b-2 border-gray-700 pb-4;
}

nav a,
nav span,
.logout-button,
.subscribe-button,
.feedback-button {
  color: var(--navbar-text);
}

nav a:hover {
  @apply text-white;
}

main nav {
  @apply border-0;
}

/* Responsive adjustments */
@media (max-width: 1024px) {
  .navbar {
    @apply flex-col items-center;
    @apply px-4;
  }

  .navbar-links {
    @apply mt-4 flex-col space-y-2;
  }

  .navbar-logo {
    @apply mb-4;
  }
}

@media (max-width: 768px) {
  .navbar {
    @apply items-center;
  }

  .navbar-links {
    @apply mt-4 flex-col space-y-2;
    @apply w-full;
  }

  .navbar-links a {
    @apply text-center;
  }
}

@media (max-width: 480px) {
  .navbar-links {
    @apply space-y-1 text-sm;
  }
}

/* Reusable classes */
.card {
  @apply mb-6 rounded-lg bg-emerald-400 p-6 shadow-md;
}

.card-grid {
  @apply grid grid-cols-1 gap-4 lg:grid-cols-2;
}

.card-header {
  @apply mb-2 text-lg font-semibold text-black;
}

.card-title {
  @apply mb-4 text-2xl font-bold text-black;
}

.card-text {
  @apply mb-4 text-sm text-black;
}

.card-link {
  @apply text-xl font-bold text-gray-800 hover:underline;
}

.page-title {
  @apply mb-6 text-center text-2xl font-bold text-[#99ffd3];
}

.card-img {
  display: block;
  max-width: 100%;
  height: auto;
  border-radius: 1rem;
  margin: 0 auto 1rem auto;
}

/* Login Page Styles */
.login-card {
  @apply mb-6 rounded-lg bg-emerald-500 p-6 shadow-md;
}

.login-card-title {
  @apply mb-6 text-3xl font-bold text-gray-100;
}

.login-card-form {
  @apply flex flex-col space-y-4;
}

.login-card-label {
  @apply mb-2 block text-sm font-medium text-gray-700;
}

.login-card-input {
  @apply w-full rounded-lg border border-gray-300 p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none;
}

.login-card-button {
  @apply w-full rounded-lg bg-emerald-700 py-2 text-white hover:bg-emerald-800 focus:ring-2 focus:ring-emerald-500 focus:outline-none;
}

.login-card-error {
  @apply mt-2 text-center text-red-500;
}

/* form input */

.create-form-input {
  @apply mt-1 block w-full rounded-md border border-gray-300 px-4 py-3 font-medium text-black shadow-sm focus:border-indigo-500 focus:ring-indigo-500 focus:outline-none sm:text-sm;
}

/* CreatePost styles */
.create-post-page {
  @apply flex min-h-screen items-center justify-center;
}

.create-post-form {
  @apply w-full max-w-6xl space-y-8 p-12 shadow-lg;
}

.create-post-title {
  @apply text-center text-4xl font-semibold;
  color: var(--navbar-text);
}

.create-post-error {
  @apply mt-2 text-center text-red-500;
}

.create-post-label {
  @apply mb-2 block text-sm font-medium;
  color: var(--navbar-text);
}

.create-post-input,
.create-post-textarea,
.create-post-category-select {
  @apply mt-2 block w-full rounded-lg border border-gray-300 px-6 py-4 font-medium text-black shadow-md focus:ring-2 focus:ring-indigo-500 focus:outline-none sm:text-sm;
}

.create-post-textarea {
  @apply h-64;
}

.create-post-file-info {
  @apply ml-4 text-sm font-medium text-emerald-500;
}

.create-post-image-preview {
  @apply relative mt-4 h-72 w-full overflow-hidden rounded-lg;
}

.create-post-button-group {
  @apply mt-6 flex justify-center space-x-4;
}

.create-post-button,
.create-post-draft-button {
  @apply w-1/3 rounded-md px-8 py-4 font-semibold text-white;
}

.create-post-button {
  @apply bg-blue-600 hover:bg-blue-700 focus:ring-2 focus:ring-blue-500;
}

.create-post-draft-button {
  @apply bg-pink-600 hover:bg-pink-700 focus:ring-2 focus:ring-pink-500;
}

.create-post-remove-button {
  @apply absolute top-2 right-2 rounded-full bg-red-500 p-2 text-white hover:bg-red-600;
}

.create-post-input-error,
.create-post-textarea-error {
  @apply mt-1 text-sm text-red-500;
}

.create-post-file-input-container {
  @apply relative mt-2 flex items-center;
}

.create-post-input {
  @apply w-full rounded-md border border-gray-300 px-4 py-4;
}

.file-placeholder {
  @apply pointer-events-none absolute top-1/2 left-0 -translate-y-1/2 transform text-sm;
  color: var(--navbar-text);
  padding-left: 120px;
  padding-top: 7px;
}

.create-post-image-preview {
  @apply relative mt-2;
}

.create-post-remove-button {
  @apply absolute top-1 right-1 rounded-md bg-red-500 p-2 text-white hover:bg-red-600;
}

/* Rendered post content*/
.markdown-content {
  line-height: 1.6;
}

.markdown-content hr {
  border: none;
  border-top: 1px solid black;
  margin: 1em 0;
}

.markdown-content h1,
.markdown-content h2,
.markdown-content h3 {
  margin-top: 1em;
  margin-bottom: 0.5em;
}

.markdown-content h1 {
  font-size: 2em;
}

.markdown-content h2 {
  font-size: 1.5em;
}

.markdown-content h3 {
  font-size: 1.17em;
  font-weight: bold;
}

.markdown-content ul,
.markdown-content ol {
  margin: 0;
  padding: 0;
}

.markdown-content ul {
  list-style-type: disc;
  padding-left: 1.5em;
}

.markdown-content ol {
  list-style-type: decimal;
  padding-left: 1.5em;
}

.markdown-content li {
  margin-bottom: 0.5em;
}

.markdown-content blockquote {
  border-left: 4px solid #ccc;
  padding-left: 1em;
  margin: 1em 0;
  font-style: italic;
  background-color: #f9f9f9;
}

.markdown-content p {
  margin-bottom: 1em;
}

.markdown-content code {
  font-family: monospace;
  background-color: black;
  color: #99ffd3;
  padding: 0.2em 0.4em;
  border-radius: 4px;
}

.markdown-content pre {
  background-color: black;
  padding: 1em;
  border-radius: 4px;
  overflow-x: auto;
}

.markdown-content table {
  width: 100%;
  border-collapse: collapse;
  margin-bottom: 1em;
  table-layout: fixed; /* force equal-width columns */
  word-wrap: break-word; /* allow text to break inside cells */
}

.markdown-content th,
.markdown-content td {
  padding: 0.5em;
  border: 1px solid black;
  font-size: 0.85rem; /* slightly smaller text on small screens */
}

.markdown-content th {
  @apply bg-emerald-500;
}

@media (max-width: 600px) {
  .markdown-content table {
    font-size: 0.8rem; /* scale down more on small screens */
  }

  .markdown-content th,
  .markdown-content td {
    padding: 0.4em; /* tighter padding */
  }
}
.markdown-content a {
  text-decoration: underline;
}

